# openvm-reth-benchmark

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  STATELESS_IMPLEMENTATION.md  generate-inputs-parallel.sh  generate-inputs.sh  generate_inputs.sh  log_parse.py  profile.json  run-benchmarks.sh  run-profiling.sh  run.sh  run_aot.sh  rust-toolchain.toml  scr.sh  sum_times.py
.cargo/: config.local.toml  config.template.toml  config.toml
.github/workflows/: build-server.yml  compare-bench.yml  compare-branches.yml  pr.yml  reth-benchmark.yml  run-benchmark-v2.yml  update-openvm.yml  update-patches.yml
bench-results/: base-6232b6dc-state-root.txt  base-6232b6dc-update.txt  cell-7d26f404-state-root.txt  cell-7d26f404-update.txt  path-21ff6b71-state-root.txt  path-21ff6b71-update.txt  skip-nibs-1d7ae471-state-root.txt  skip-nibs-1d7ae471-update.txt
bench-results-large/: base-6232b6dc-state-root.txt  base-6232b6dc-update.txt  skip-nibs-6c255a92-state-root.txt  skip-nibs-6c255a92-update.txt
benchmarks-dispatch/refs/heads/axiom/: reth-109217c4010b67f7f94321ebe0cc178633a9721e6acf127f0ade0a800883e4c7.md  reth-23201913bb2b7877f3102813e76ec69bfc930675c2dc25b9117deddbb69d8d2d.md  reth-7d81e68589e2e07f5fa7d7980e0d82efa61847bec6ae4d877d95b8339229a63c.md  reth-90264585caf2ddc79854491a8158491c8b84f2f084f6426bc55452fc0e737c6b.md  reth-fb56c03bad233a974c226a203d54a93e8b0c9a8afc003c23f2de9c25c87fd4a4.md
benchmarks-dispatch/refs/heads/ci-perf-flamegraph/: reth-08b14018e492fcdac99600f49a2136b2634b5423-50e198f1294df08a2a0d574a50e00dcd030cd87b7bd938c0c51e38970810872e.md  reth-186ea710f719dab614f4ddc743c56c1fc9fd97b3-5b03e868a7b71ce7edf26371bc0228caf3e56614d7b107ce825481627ace937f.md  reth-1ad5037201fb111ef111c562693e6b1b2d3e4728-5e1a5c7e1e4965ea5107bc334e1005ef33d2fa58439305b0976898672e0343b1.md  reth-1ad5037201fb111ef111c562693e6b1b2d3e4728-ee287423a7f1e2bca30d935f309f5bc943d99d7b81f096a089d6b9484e4d5ac9.md  reth-27e0ca96a11ff2de10239045d498ab4b622445af-996b6675e21f80ba65bf9c8faa105f14c8c291441f0ff4376c136228403040b8.md  reth-7d75592eb45d80475daa493dc648634d3252675e-996b6675e21f80ba65bf9c8faa105f14c8c291441f0ff4376c136228403040b8.md  reth-99847434ed77d894effab8621fc2fbefca1cf6f9-aed96621bc66eec7e10bfd3d847486a7e97f909c30f20a440b4c31404b697b0a.md  reth-d466a2e8dea450673716ffb21c3bc81a139a6e1b-6287c26612e57882c95301a93ee883c533478e65046c484f6ffdb186732ddf3e.md  reth-ee8acc1ba0109c5a5b27594e3f1fec3aae69aff8-2e3e7356a68191f3818a0c09604ad265d825bc21ea90e7661db5c4e001ab74f6.md
benchmarks-dispatch/refs/heads/develop/: reth-f6ed5612884b8ff8de7158a654759c5ff978067b21608cb7e9e5da006d8728aa.md
benchmarks-dispatch/refs/heads/faster-mpt-bitmask/: reth-dd5692bdbd5db5332bd324daa56d1d041321b4fb-f237e8094309b0e049e5a8839310ec19532685ff8636d2413ac774c1a966d805.md
benchmarks-dispatch/refs/heads/main/: reth-009733c60115da05ca1e0d9fff0028f68aab9d15-4f5aa51a189c211c7f7c808a5e53b301047715e1393b824294e1a63bdef1997b.md  reth-009733c60115da05ca1e0d9fff0028f68aab9d15-e6966fdd448d8908148c461a126c965a70507d41002f8e0e31770760988a6ad7.md  reth-00a5e169eed9cd62b56704eda3cfb2a53dad49a5-ce671fb4c21be3aff7b36d3231bd735679ebcfe099dd228fb643b9d825919746.md  reth-00bfa559a304662e658172e9fc1347e77e722066-a8e20b82016d5691c047c494c2d95c248563a7353d748bcd12a9d09583eb1ad6.md  reth-00edfdb46dd058402ff5262b31d43fb7b39becdb-5f85b5dd27a64e6792f81c28800a9855599ea4d389f11254c0dced2d88e9b18a.md  reth-01bb116265f87a18a077ea7d7f8d27eb07792b0a-e78806e56af14cc75b78af2d9d129012f3fccf1748bd278cba42ca2274e9278e.md  reth-0220229ebcabed2aed58b2f2a6c7fc1c3cb5ab5c-3512b5cb3da38281cca7cefba50cf2b557f19fae44c92cbd24f8ab120fdea56c.md  reth-0220229ebcabed2aed58b2f2a6c7fc1c3cb5ab5c-5dc966173b8562ba4417ca858ad070274d915325ed5baeb3e1ac51b4d957425b.md  reth-0220229ebcabed2aed58b2f2a6c7fc1c3cb5ab5c-9eddecbb84f0866af16e5138f188a6dea93c982cd76626279430ec5117e8b642.md  reth-022ad0938a641e43f565e50bcf57e2971fe3b087-4b86d2465f3ce4f83abc1f1a38b8936bdbbe2e2749ab5fc7883b0f55445902dd.md  (+4002 more)
ci/: reth-example-segment.json  reth-example.json  summarize.py  summarize_reth.py  update_kzg.sh  update_openvm.sh
crates/chainspec/: Cargo.toml
crates/executor/client/: Cargo.toml
crates/executor/client/src/: chain.rs  crypto.rs  custom.rs  error.rs  io.rs  lib.rs
crates/executor/host/: Cargo.toml
crates/executor/host/benches/: mpt_performance.rs
crates/executor/host/src/: lib.rs  lightweight.rs  lookup.rs  preimage.rs  rpc.rs
crates/executor/host/tests/: integration.rs
crates/exex/: Cargo.toml
crates/exex/src/: db.rs  lib.rs  main.rs
crates/host-bench/: Cargo.toml
crates/host-bench/src/: cli.rs  lib.rs  profiler.rs
crates/mpt/: Cargo.toml
crates/mpt-tools/: Cargo.toml  README.md
crates/mpt-tools/benches/: mpt_performance.rs
crates/mpt-tools/src/: lib.rs
crates/mpt/benches/: flat_mpt_serde.rs
crates/mpt/src/: flat.rs  from_proof.rs  hp.rs  lib.rs  mpt.rs  mpt2.rs  node.rs  resolver.rs  state.rs  tests.rs  trie.rs  utils.rs
crates/mpt/src/mpt/: build_mpt.rs
crates/mpt/tests/: build_mpt_test.rs
crates/mptnew/: Cargo.toml
crates/mptnew/src/: build_mpt.rs  bump_bufmut.rs  hp.rs  lib.rs  node.rs  state.rs  tests.rs  trie.rs  word_bytes.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: chain_spec.rs  lib.rs
crates/revm-crypto/: Cargo.toml
crates/revm-crypto/src/: lib.rs
crates/rpc-proxy/: Cargo.toml
crates/rpc-proxy/src/: execution.rs  lib.rs  lookup.rs  main.rs  rpc.rs  transport.rs  trie.rs  witness.rs
crates/rpc-proxy/src/db/: mod.rs  preflight.rs  provider.rs
crates/stateless-executor/: Cargo.toml
crates/stateless-executor/src/: error.rs  io.rs  lib.rs
crates/stateless-witness/: Cargo.toml
crates/stateless-witness/src/: error.rs  lib.rs  utils.rs
crates/storage/rpc-db/: Cargo.toml
crates/storage/witness-db/: Cargo.toml
scripts/: analyze_handlers.py  ethproofs_analyzer.py  generate-inputs-parallel.sh  precompile_analyzer.py  sum_fallback_runtimes.py
server/: main.py  prove_block.sh  requirements.txt  test.md
(+971 files in other folders)
