[workspace]
members = [
    "bin/host",
    "crates/executor/client",
    "crates/executor/host",
    "crates/primitives",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
    "crates/host-bench",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
eyre = "0.6"
anyhow = { version = "1.0.86", default-features = false }
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"
bincode_derive = "2.0.1"
bincode = { version = "2.0.1", default-features = false, features = [
    "derive",
    "alloc",
    "serde",
] }
rustc-hash = "2.1.0"
itertools = "0.14"

# workspace
openvm-rpc-db = { path = "./crates/storage/rpc-db" }
openvm-witness-db = { path = "./crates/storage/witness-db" }
openvm-client-executor = { path = "./crates/executor/client" }
openvm-host-executor = { path = "./crates/executor/host" }
openvm-primitives = { path = "./crates/primitives" }
openvm-reth-benchmark = { path = "./crates/host-bench", default-features = false }
# reth
reth-primitives = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false, features = [
    "alloy-compat",
    "std",
    # "ecrecover",
] }
reth-codecs = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-consensus = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-evm = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-revm = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false, features = [
    "std",
] }
reth-node-ethereum = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-evm-ethereum = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false, features = [
    "std",
] }
reth-storage-errors = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false, features = [
    "std",
] }
reth-trie = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-trie-common = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-chainspec = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-execution-errors = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-execution-types = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-db = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-errors = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-primitives-traits = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }
reth-stateless = { git = "https://github.com/axiom-crypto/reth", branch = "openvm/stateless-experiment", default-features = false }

# revm
revm = { version = "22.0.1", features = [
    "std",
    "serde",
], default-features = false }
revm-primitives = { version = "18.0.0", features = [
    "std",
    "serde",
], default-features = false }
revm-inspector = "3.0.0"
revm-interpreter = { version = "18.0.0", default-features = false }
revm-precompile = { version = "18.0.0", default-features = false }

# alloy
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-rlp = "0.3.10"
alloy-trie = "0.8.1"
alloy-consensus = { version = "0.14.0", default-features = false }
alloy-provider = { version = "0.14.0", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-client = { version = "0.14.0", default-features = false, features = [
    "reqwest",
] }
alloy-rpc-types = { version = "0.14.0", default-features = false, features = [
    "eth",
] }
alloy-transport = { version = "0.14.0" }
alloy-transport-http = { version = "0.14.0", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-eips = { version = "0.14.0", default-features = false }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0", default-features = false }
# openvm
# Note: the openvm-sdk commit does not need to be exactly the same as the `openvm` commit used in the guest program: as long as
# the openvm-sdk commit doesn't change any guest libraries, they are compatible
# This allows us to not update revm and openvm-kzg each time we change openvm-sdk
openvm-build = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-benchmarks-prove = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-keccak256-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-keccak256-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-bigint-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-bigint-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-algebra-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-ecc-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-pairing-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-native-compiler = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", rev = "59391092804d54615790b90549b76a36e68a6f21", default-features = false }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[profile.release]
lto = "thin"

[profile.profiling]
inherits = "maxperf"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3
