[package]
name = "exex"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
version.workspace = true

[dependencies]

# workspace
openvm-mpt.workspace = true

# reth
reth.workspace = true
reth-node-ethereum.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-tracing.workspace = true
reth-execution-types.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-trie.workspace = true
reth-chainspec.workspace = true
reth-db.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-node-core.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-storage-errors.workspace = true

# other
eyre.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = "0.12"

# workspace dependencies
openvm-host-executor.workspace = true
openvm-client-executor.workspace = true
openvm-primitives.workspace = true
openvm-rpc-db.workspace = true

# alloy
alloy-rpc-types.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-consensus.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

[lints]
workspace = true

[dev-dependencies]
reth-exex-test-utils.workspace = true
