[package]
name = "openvm-mpt-tools"
description = "Development tools for MPT profiling and benchmarking"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
url.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenv = "0.15.0"
bincode = { workspace = true, features = ["serde", "std"] }

# Memory profiling
dhat = "0.3"
criterion = { version = "0.8", features = ["html_reports"] }

# workspace
openvm-stateless-executor.workspace = true
openvm-chainspec.workspace = true
openvm-mpt = { workspace = true }
openvm-rpc-proxy.workspace = true

# reth dependencies for benchmarking and profiling
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-execution-types.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true

# alloy
alloy-provider.workspace = true

[features]
default = []

[[bin]]
name = "mpt_profiler"
path = "src/bin/mpt_profiler.rs"

[[bin]]
name = "generate_benchmark_data"
path = "src/bin/generate_benchmark_data.rs"

[[bench]]
name = "mpt_performance"
harness = false
