[package]
name = "openvm-mpt"
description = ""
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
eyre.workspace = true
rlp.workspace = true
serde.workspace = true
thiserror.workspace = true
bincode.workspace = true
rustc-hash.workspace = true

# reth
reth-primitives.workspace = true
reth-trie.workspace = true
reth-execution-types.workspace = true
reth-revm.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-consensus.workspace = true
risc0-ethereum-trie.workspace = true

[dev-dependencies]
alloy-trie.workspace = true
hex-literal.workspace = true
tracing-subscriber = "0.3.18"

openvm-mpt = { path = ".", features = ["preimage_context"] }

[features]
default = []
preimage_context = []
