[package]
name = "openvm-rpc-proxy"
description = "OpenVM RPC Proxy for Execution Witness"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-trie = { workspace = true }

reth-chainspec = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-primitives-traits = { workspace = true }
# reth-stateless = { workspace = true }

revm = { workspace = true, features = ["c-kzg", "blst"] }

async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
itertools = { workspace = true }
rayon.workspace = true
eyre.workspace = true
actix-web.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
