[package]
name = "openvm-rpc-proxy"
description = "OpenVM RPC Proxy for Execution Witness"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full"] }
alloy-chains.workspace = true
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-trie.workspace = true
alloy-rpc-types-debug.workspace = true
tower.workspace = true

reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-primitives-traits.workspace = true

revm = { workspace = true, features = ["c-kzg", "blst"] }
risc0-ethereum-trie = { git = "https://github.com/risc0/risc0-ethereum.git", tag = "v3.0.1", features = ["orphan"] }

clap = { workspace = true, features = ["derive", "env"] }
itertools = { workspace = true }
rayon.workspace = true
eyre.workspace = true
actix-web.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
