[package]
name = "openvm-client-executor"
description = "OpenVM client executor"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true

openvm-primitives.workspace = true

# reth
reth-primitives = { workspace = true }
reth-evm-ethereum.workspace = true
reth-stateless.workspace = true

# revm
revm-primitives.workspace = true

[target.'cfg(target_os = "zkvm")'.dependencies]
# revm-primitives = { workspace = true, features = ["hashbrown"] }
alloy-primitives = { workspace = true, features = ["rayon", "map-foldhash"] }
# revm must have feature `kzg-rs` or `openvm-kzg` enabled. Due to patching we cannot enable `openvm-kzg` here.

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
revm = { workspace = true, features = ["c-kzg"] }

[dev-dependencies]

[features]
