[package]
name = "openvm-host-executor"
description = ""
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
serde_json.workspace = true
url.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
rustc-hash.workspace = true
zerocopy.workspace = true

# workspace
openvm-rpc-db.workspace = true
openvm-witness-db.workspace = true
openvm-client-executor.workspace = true
openvm-primitives.workspace = true

# reth
reth-codecs.workspace = true
reth-primitives = { workspace = true, features = ["secp256k1"] }
reth-primitives-traits.workspace = true
reth-storage-errors.workspace = true
reth-trie.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true
reth-revm.workspace = true
reth-evm-ethereum.workspace = true
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-trie-common.workspace = true
reth-storage-api.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-consensus.workspace = true
itertools.workspace = true
futures.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-debug.workspace = true
hex = "0.4.3"

[dev-dependencies]
alloy-primitives.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bincode = "1.3.3"
dotenv = "0.15.0"
hex = "0.4.3"
color-eyre = "0.6"
